frontend/deploy-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mon-app-nginx
  namespace: training03
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mon-app
  template:
    metadata:
      labels:
        app: mon-app
    spec:
      serviceAccountName: app-sa
      containers:
      - name: nginx
        image: docker.io/feeshchacademy/feesh:simple-frontend-v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/conf.d
          readOnly: true
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
      volumes:
      - name: nginx-config
        configMap:
          name: nginx-config
