frontend/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: training03
  labels:
    app: mon-app-nginx
spec:
  type: ClusterIP
  selector:
    app: mon-app-nginx
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
